Make container name specific to image

--- a/v2.0/stacks/linuxserver_jellyfin/docker-compose-syno.yml
+++ b/v2.0/stacks/linuxserver_jellyfin/docker-compose-syno.yml
@@ -2,7 +2,7 @@ version: "2.1"
 services:
   jellyfin:
     image: ghcr.io/linuxserver/jellyfin
-    container_name: jellyfin
+    container_name: linuxserver_jellyfin
     # environment:
       #- PUID=0
       #- PGID=65536
